# design_pattern_facts_dims_workshop

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  log4j2.properties  pyproject.toml  spark_defaults.conf  todo.md
.devcontainer/: devcontainer.json
notebooks/: dim_date.csv  etl_table.html  fact_dims_90%_de.ipynb  fct_line_items.py  fct_orders.py  old-design_patterns_facts_dims.ipynb  run_ddl.py  sample.ipynb  sample.parquet  workshop.ipynb  workshop.qmd
notebooks-w-solutions/: dim_customer_v1.py  dim_customer_v2.py  fct_line_items.py  fct_orders.py  run_ddl.py  workshop.html  workshop.ipynb  workshop.qmd
notebooks-w-solutions/.ipynb_checkpoints/: workshop-checkpoint.ipynb
notebooks-w-solutions/old/: fact_dims_90%_de.ipynb  sample.ipynb
notebooks-w-solutions/workshop_files/libs/bootstrap/: bootstrap-174b687ce1a5d453053f714fc900cc2c.min.css
notebooks/.ipynb_checkpoints/: etl_table-checkpoint.html
