[project]
name = "design-pattern-facts-dims-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.4",
    "duckdb-engine>=0.17.0",
    "great-tables>=0.22.0",
    "grpcio>=1.81.1",
    "grpcio-status>=1.81.1",
    "jupysql>=0.11.1",
    "jupyter-ai>=3.0.0",
    "jupyter-ai-magic-commands>=0.0.3",
    "jupyterlab>=4.6.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pyspark>=4.1.2",
    "quarto-cli>=1.9.38",
    "selenium>=4.45.0",
    "sqlframe[duckdb]>=4.3.0",
    "toml>=0.10.2",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.6.0",
    "jupyterlab-code-formatter>=3.0.3",
    "ruff>=0.15.18",
]
